--- a/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
@@ -10,6 +10,7 @@
   &:last-child { margin-right: 0; }
   &.no-margin { margin:0; }
   &.btn-small { @include font-size(14); }
+  &.btn-extra-small { @include font-size(12); }
 
   &.primary {
     background-color: $color__fipra-blue;
