--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -12,14 +12,12 @@
   @include clearfix;
   width:100%;
 
-//  &.with-border { border-top: 3px solid darken(white, 15%); }
+  &.with-border { padding-top:$v-rhythm; border-top:1px solid darken($color__fipra-lighter-gray, 8%); }
 
 //  @include media($media__xlarge) { padding-top:$v-rhythm * 2; }
   &.with-hero-banner { padding-top:0; }
 
   #breadcrumbs {
-    padding-bottom:$v-rhythm * 2;
-    @include row();
     @include outer-container($container__outer-width);
     .breadcrumbs-content {
       @include font-size(13);
@@ -50,8 +48,8 @@
     @include media($media__medium) { @include span-columns(4); }
     aside {
       @include clearfix;
-      &:not(:first-child) { margin-top:$v-rhythm * 1.5; padding-top:$v-rhythm; border-top:1px solid darken($color__fipra-lighter-gray, 7%); }
-      @include media($media__medium) { padding-bottom: $v-rhythm * 2; }
+      &:not(:first-child) { margin-top:$v-rhythm * 2; padding-top:$v-rhythm; border-top:1px solid darken($color__fipra-lighter-gray, 7%); }
+//      @include media($media__medium) { padding-bottom: $v-rhythm; }
     }
   }
 
@@ -72,8 +70,7 @@
 .page-nav {
   @include clearfix;
   background-color: $color__fipra-light-gray;
-  border-bottom:1px solid darken($color__fipra-light-gray, 8%);
-//  @include media($media__medium) { padding:$v-rhythm * 0.5 0; }
+//  border-bottom:2px solid darken($color__fipra-light-gray, 5%);
 }
 
 .row { @include row(); }
@@ -84,9 +81,6 @@
   padding-right:em(20px);
 
   @include media($media__large) { @include outer-container($container__outer-width); padding-left:0; padding-right:0; }
-  //    padding:$v-rhythm * 2 em(40px) 0;
-  //    @include media(max-width $media__small) { padding:$v-rhythm * 2 em(20px) 0; }
-  //    margin:0;
 }
 
 //Column classes
