--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -143,7 +143,7 @@
 .font-14 { @include font-size(14); }
 
 //Text Colours
-.blue-gray {
+.blue-gray-text {
   color: $color__fipra-blue-gray;
 }
 
@@ -235,4 +235,14 @@
   }
 }
 
-.blue-text { color: $color__fipra-blue; }
+.white-box {
+  background-color:white;
+  padding:$v-rhythm em(18px);
+  border-bottom:2px solid darken(white, 10%);
+}
+
+.blue-text { color: $color__fipra-blue !important; }
+.black-text { color: $color_soft-black !important; }
+
+.hide-s { @include media(max-width $media__medium) { display:none; } }
+.hide-m { @include media($media__medium) { display:none; } }
